; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/netrate/httpd/extr_httpd.c_httpd_worker.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/netrate/httpd/extr_httpd.c_httpd_worker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.httpd_thread_statep = type { i32 }

@statep = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @httpd_worker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @httpd_worker(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.httpd_thread_statep*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.httpd_thread_statep*
  store %struct.httpd_thread_statep* %6, %struct.httpd_thread_statep** %3, align 8
  br label %7

7:                                                ; preds = %1, %14, %15
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @statep, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @accept(i32 %10, i32* null, i32* null)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %7

15:                                               ; preds = %7
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.httpd_thread_statep*, %struct.httpd_thread_statep** %3, align 8
  %18 = getelementptr inbounds %struct.httpd_thread_statep, %struct.httpd_thread_statep* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @http_serve(i32 %16, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @close(i32 %21)
  br label %7
}

declare dso_local i32 @accept(i32, i32*, i32*) #1

declare dso_local i32 @http_serve(i32, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
